--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="start_btn">Start</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- for the Trade Selection Dialog -->
+    <string name="bank_resources">Bank:</string>
+    <string name="player_resources">Player Resources:</string>
+
 </resources>
