--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="start_btn">Start</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="gather_selection">Select a terrain or resource</string>
+    <string name="gather_title">Gather</string>
+    <string name="gather_message">Gather resources?</string>
 
 </resources>
