trade card functionality implemented. (still might have some bugs but it works for the general case).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <!-- for the Trade Selection Dialog -->
     <string name="bank_resources">Bank:</string>
     <string name="player_resources">Player Resources:</string>
+    <string name="transaction_cost">Transaction Cost:</string>
 
 </resources>
