--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="start_btn">Start</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sample">Sample</string>
+    <string name="holding_area">Holding Area</string>
+    <string name="production_area">Production Area</string>
+    <string name="city_area">City Area</string>
 
 </resources>
