--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="player_resources">Player Resources:</string>
     <string name="transaction_cost">Transaction Cost:</string>
 
+    <!-- for the trophy -->
+    <string name="opponent_resource">Opponent Resource</string>
+
 </resources>
